footer nav gap correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -406,7 +406,7 @@ footer {
 footer nav {
   width: 100%;
   display: flex;
-  gap: 15vw;
+  gap: 13vw;
 }
 
 footer nav h5 {
